[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/SysView_Leave_Button.gd" type="Script" id=1]
[ext_resource path="res://scripts/SolarSystemRender.gd" type="Script" id=2]
[ext_resource path="res://styles/MenuButton_Normal.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/MenuButton_HoverFocus.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/MenuButton_Pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://scenes/VFX Scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/SystemNameLabel.gd" type="Script" id=7]
[ext_resource path="res://scripts/EnterSystemEvent.gd" type="Script" id=8]
[ext_resource path="res://scripts/SystemDetailLabel.gd" type="Script" id=9]
[ext_resource path="res://scripts/SystemViewportController.gd" type="Script" id=10]
[ext_resource path="res://sprites/UI_planet_hover_border.png" type="Texture" id=12]
[ext_resource path="res://StarField/StarField.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/background space dust.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/PlayerStats.tscn" type="PackedScene" id=15]
[ext_resource path="res://styles/MenuButton_Disabled.tres" type="StyleBox" id=16]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=15]
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://fonts/Montserrat-BoldItalic.ttf"

[sub_resource type="DynamicFont" id=17]
font_data = SubResource( 16 )

[sub_resource type="DynamicFont" id=9]

[sub_resource type="DynamicFontData" id=10]
font_path = "res://fonts/Montserrat-Bold.ttf"

[sub_resource type="DynamicFont" id=11]
font_data = SubResource( 10 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://fonts/Montserrat-Medium.ttf"

[sub_resource type="DynamicFont" id=13]
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 7 )

[node name="SystemViewPort" type="Node2D"]
script = ExtResource( 10 )

[node name="VFX Scene" parent="." instance=ExtResource( 6 )]

[node name="StarField" parent="." instance=ExtResource( 13 )]
amount = 500

[node name="Nebula" parent="." instance=ExtResource( 14 )]
position = Vector2( 1160, 96 )
scale = Vector2( 5, 5 )

[node name="SystemView" type="Node2D" parent="."]

[node name="SolarSystem" type="Node2D" parent="SystemView"]
script = ExtResource( 2 )
planet_scene_path = "res://sprites/planets/planet.tscn"

[node name="Control" type="CanvasLayer" parent="SystemView"]

[node name="SystemNameLabel" type="Label" parent="SystemView/Control"]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "TANTALUS V"
align = 1
script = ExtResource( 7 )

[node name="SystemDetailLabel" type="RichTextLabel" parent="SystemView/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -96.0
margin_right = 384.0
margin_bottom = -56.0
grow_vertical = 0
rect_clip_content = false
custom_colors/default_color = Color( 0.654902, 0.654902, 0.654902, 1 )
custom_fonts/mono_font = SubResource( 15 )
custom_fonts/bold_italics_font = SubResource( 17 )
custom_fonts/italics_font = SubResource( 9 )
custom_fonts/bold_font = SubResource( 11 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "SYSTEM INFORMATION"
text = "SYSTEM INFORMATION"
fit_content_height = true
script = ExtResource( 9 )
highlight_boiler_plate = "[b][color=#FF8200]%s[/color][/b]"

[node name="SystemAnomalyLabel" type="Label" parent="SystemView/Control"]
self_modulate = Color( 1, 1, 1, 0.580392 )
margin_left = 1040.0
margin_top = 144.0
margin_right = 1280.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 6 )
text = "The %s Anomaly"
align = 1

[node name="HoverUI" type="Control" parent="."]
visible = false
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HoverUI"]
self_modulate = Color( 1.2, 0.51, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HoverUI"]
margin_left = -32.0
margin_top = 72.0
margin_right = 96.0
margin_bottom = 88.0
custom_colors/font_color = Color( 1.2, 0.51, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Planet Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LeaveSystem" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -57.0
margin_right = -32.0
margin_bottom = -32.0
rect_min_size = Vector2( 0, 25 )
custom_colors/font_color_disabled = Color( 0.47451, 0.47451, 0.47451, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 16 )
custom_styles/normal = ExtResource( 3 )
text = "Leave System"
script = ExtResource( 1 )
GamepadButton = 4
StarMapViewport_scene = "res://scenes/StarMapViewport.tscn"

[node name="PlayerStats" parent="." instance=ExtResource( 15 )]
margin_right = 70.9709
margin_bottom = 77.7715

[node name="EnterSystemEvent" type="Node2D" parent="."]
script = ExtResource( 8 )

[connection signal="button_down" from="CanvasLayer/LeaveSystem" to="CanvasLayer/LeaveSystem" method="_on_button_down"]
